gccida/c3/ht_create
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:22: error: conflicting types for 'ht_create'
 struct hash_table * ht_create( unsigned int order) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.h:69:20: note: previous declaration is here
extern hash_table *ht_create PARAMS ((unsigned int order));
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:548:12: error: expected expression
*( _OWORD *)&v2->stack.chunk_size = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:548:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->stack.chunk_size = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:548:16: error: incomplete definition of type 'struct hash_table'
*( _OWORD *)&v2->stack.chunk_size = 0LL; 
             ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:549:12: error: expected expression
*( _OWORD *)&v2->stack.object_base = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:549:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->stack.object_base = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:549:16: error: incomplete definition of type 'struct hash_table'
*( _OWORD *)&v2->stack.object_base = 0LL; 
             ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:550:12: error: expected expression
*( _OWORD *)&v2->stack.chunk_limit = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:550:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->stack.chunk_limit = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:550:16: error: incomplete definition of type 'struct hash_table'
*( _OWORD *)&v2->stack.chunk_limit = 0LL; 
             ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:551:12: error: expected expression
*( _OWORD *)&v2->stack.alignment_mask = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:551:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->stack.alignment_mask = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:551:16: error: incomplete definition of type 'struct hash_table'
*( _OWORD *)&v2->stack.alignment_mask = 0LL; 
             ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:552:12: error: expected expression
*( _OWORD *)&v2->stack.freefun = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:552:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2->stack.freefun = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:552:16: error: incomplete definition of type 'struct hash_table'
*( _OWORD *)&v2->stack.freefun = 0LL; 
             ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:553:14: error: expected expression
*( ( _OWORD *)&v2->stack + 5) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:553:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&v2->stack + 5) = 0LL; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:553:18: error: incomplete definition of type 'struct hash_table'
*( ( _OWORD *)&v2->stack + 5) = 0LL; 
               ~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/hashtable.c:541:9: note: forward declaration of 'struct hash_table'
 struct hash_table * ht_create( unsigned int order) 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ht_create/src/obj/hashtable.o] Error 1
